[tool.poetry]
name = "todolist"
version = "0.1.0"
description = ""
authors = ["MohammadNasimi <mohammadnasimi6803@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
sqlmodel = "^0.0.22"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
